# Chonps_alpha

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateBuild.bat  LICENSE  README.md
Chonps/Dependencies/GLFW/: CMakeLists.txt
Chonps/Dependencies/GLFW/src/: CMakeLists.txt
Chonps/Dependencies/GLFW/x64/Debug/: GLFW.exe.recipe
Chonps/Dependencies/freetype/: CMakeLists.txt
Chonps/Dependencies/freetype/src/lzw/: ftlzw.c
Chonps/Dependencies/freetype/src/raster/: ftmisc.h
Chonps/Dependencies/glad/: CMakeLists.txt
Chonps/Dependencies/glad/include/glad/: glad.h
Chonps/Dependencies/glad/src/: glad.c
Chonps/Dependencies/imgui/: CMakeLists.txt
Chonps/Dependencies/imgui/Release/imgui.tlog/: imgui.lastbuildstate
Chonps/Dependencies/libpng/: CMakeLists.txt
Chonps/Dependencies/libpng/include/: pnglibconf.h
Chonps/Dependencies/msdfgen/: CMakeLists.txt
Chonps/Dependencies/msdfgen/include/core/: save-bmp.cpp  save-tiff.cpp  shape-description.cpp
Chonps/Dependencies/msdfgen/include/ext/: import-svg.cpp  save-png.cpp
Chonps/Dependencies/stb/: stb_image.cpp  stb_image_write.cpp  stb_truetype.cpp
Chonps/Dependencies/stb_image/: stb_image.cpp
Chonps/Dependencies/tinyxml2/include/: tinyxml2.cpp
Chonps/Dependencies/vma/include/: vk_mem_alloc.cpp
Chonps/Dependencies/zlib/: CMakeLists.txt
Chonps/Dependencies/zlib/include/: zconf.h
Chonps/include/Chonps/: Chonps.h  Header.h
Chonps/src/: Application.cpp  Application.h  Chonps.h  Chonpslib.h  Core.h  DataTypes.h  Input.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Timer.h  Window.cpp  Window.h  cepch.h
Chonps/src/Core/: Application.cpp  Application.h  Config.h  Core.h  DataTypes.h  File.cpp  File.h  Input.cpp  Input.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Math.cpp  Math.h  MouseButtonCodes.h  QueueChain.h  ThreadPool.h  Timer.h  Window.cpp  Window.h
Chonps/src/Core/ECS/: ComponentManager.h  Components.h  Entity.h  Registry.h  SystemManager.h
Chonps/src/Core/Events/: ApplicationEvents.h  Event.h  KeyEvents.h  MouseEvents.h  WindowEvents.h
Chonps/src/Events/: ApplicationEvents.h  Event.h  KeyEvents.h  MouseEvents.h  WindowEvents.h
Chonps/src/GUI/: ChonpsGui.cpp  ChonpsGui.h  ChonpsGuiContext.cpp  ChonpsGuiContext.h  ChonpsGuiShaders.h  GuiWindow.cpp  GuiWindow.h
Chonps/src/Graphics/: BatchRenderer.cpp  BatchRenderer.h  Camera.cpp  Camera.h  Cubemap.cpp  Cubemap.h  DrawList.cpp  DrawList.h  EBO.cpp  EBO.h  FBO.cpp  FBO.h  File.cpp  File.h  Font.cpp  Font.h  FrameBuffer.cpp  FrameBuffer.h  Graphics.h  IndexBuffer.cpp  IndexBuffer.h  Lighting.cpp  Lighting.h  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OrthographicCamera.cpp  OrthographicCamera.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  RendererBackends.cpp  RendererBackends.h  (+16 more)
Chonps/src/Imgui/: ImguiBuild.cpp  ImguiEditor.cpp  ImguiEditor.h  ImguiWindow.cpp  ImguiWindow.h
Chonps/src/ModelLoaders/gltf/: gltfModelLoader.cpp  gltfModelLoader.h
Chonps/src/Platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.h  OpenGLCubemap.cpp  OpenGLCubemap.h  OpenGLEBO.cpp  OpenGLEBO.h  OpenGLFBO.cpp  OpenGLFBO.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVAO.cpp  OpenGLVAO.h  OpenGLVBO.cpp  OpenGLVBO.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
Chonps/src/Platform/Vulkan/: VulkanCubemap.cpp  VulkanCubemap.h  VulkanFrameBuffer.cpp  VulkanFrameBuffer.h  VulkanIndexBuffer.cpp  VulkanIndexBuffer.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRendererAPI.cpp  VulkanRendererAPI.h  VulkanRendererBackends.h  VulkanShader.cpp  VulkanShader.h  VulkanTexture.cpp  VulkanTexture.h  VulkanUniformBuffer.cpp  VulkanUniformBuffer.h  VulkanVertexArray.cpp  VulkanVertexArray.h  VulkanVertexBuffer.cpp  VulkanVertexBuffer.h
Chonps/src/Platform/WindowAPI/glfwAPI/: glfwInput.cpp  glfwInput.h  glfwWindowAPI.cpp  glfwWindowAPI.h
ChonpsEditor/res/models/gltf/Flivver/: Flivver.gltf
ChonpsEditor/res/models/gltf/animation/: animation.gltf
ChonpsEditor/res/models/gltf/brick/: brick.gltf
ChonpsEditor/res/models/gltf/brick2/: brick2.gltf
ChonpsEditor/res/models/gltf/brickFlat/: brickFlat.gltf
ChonpsEditor/res/shaders/: CompileShaders.bat  CompileShaders2.bat  CompileWindowShader.bat  ogl.frag  ogl.vert  vulkan.frag  vulkan.vert  vulkanWindow.frag  vulkanWindow.vert  vulkanWindow_vert.spv  vulkan_frag.spv  vulkan_frag2.spv  vulkan_vert.spv  vulkan_vert2.spv
ChonpsEditor/res/shaders/opengl/: FBOshader.frag  FBOshader.vert  cubemap.vert  font.frag  gui.frag  gui.vert  infiniteGrid.frag  infiniteGrid.vert  ogl.frag  ogl.vert  preStencil.frag  preStencil.vert  shader.frag  shader.vert
ChonpsEditor/res/shaders/vulkan/: CompileCubemapShaders.bat  CompileFrameBufferShaders.bat  CompileGUIShaders.bat  CompileInfiniteGridShader.bat  CompileShaders.bat  FBOshader.vert  cubemap.frag  cubemap.vert  gui.frag  gui.vert  preStencil.frag  preStencil.vert  shader.frag  shader.vert  vulkan.frag  vulkanFB.frag  vulkanFB.vert  vulkanInfiniteGrid.frag  vulkanInfiniteGrid.vert
ChonpsEditor/src/: ChonpsEditor.cpp  ChonpsEditor.h  Main.cpp
ChonpsEditor/src/panels/: Properties.cpp  Properties.h  Scene.cpp  Scene.h  SceneHierarchy.cpp  SceneHierarchy.h
Sandbox/res/models/checkerCube/: checkerCube.mtl
Sandbox/res/models/cube/: cube.mtl
Sandbox/res/models/cubeTexture/: cubeTexture.mtl
Sandbox/res/models/cubeTexture2/: cubeTexture2.mtl
Sandbox/res/models/donut/: donut.mtl
Sandbox/res/models/spaceCube/: spaceCube.mtl
Sandbox/res/models/texture/: texture.mtl
Sandbox/res/shaders/: FBOshader.glsl  PBRshader.glsl  cubemapShader.glsl  fragment.glsl  infiniteGrid.glsl  lightShader.glsl  shader.glsl  vertex.glsl
Sandbox/res/textures/: brickTextures.mtz
Sandbox/src/: Sandbox.cpp
(+25 files in other folders)
